; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ui-out.c_uo_table_body.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ui-out.c_uo_table_body.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ui_out = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.ui_out*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @uo_table_body(%struct.ui_out* %0) #0 {
  %2 = alloca %struct.ui_out*, align 8
  store %struct.ui_out* %0, %struct.ui_out** %2, align 8
  %3 = load %struct.ui_out*, %struct.ui_out** %2, align 8
  %4 = getelementptr inbounds %struct.ui_out, %struct.ui_out* %3, i32 0, i32 0
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32 (%struct.ui_out*)*, i32 (%struct.ui_out*)** %6, align 8
  %8 = icmp ne i32 (%struct.ui_out*)* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  br label %18

10:                                               ; preds = %1
  %11 = load %struct.ui_out*, %struct.ui_out** %2, align 8
  %12 = getelementptr inbounds %struct.ui_out, %struct.ui_out* %11, i32 0, i32 0
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32 (%struct.ui_out*)*, i32 (%struct.ui_out*)** %14, align 8
  %16 = load %struct.ui_out*, %struct.ui_out** %2, align 8
  %17 = call i32 %15(%struct.ui_out* %16)
  br label %18

18:                                               ; preds = %10, %9
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
